--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,6 @@
     "endOfLine": "auto",
     "printWidth": 80,
     "semi": true,
-    "singleQuote": false,
+    "singleQuote": true,
     "tabWidth": 2
 }
